# hurst-pullback

./: README.md  pyproject.toml
configs/: base.yaml
data/: README.md
data/clean/: EMD_clean.csv  ES_clean.csv  NQ_clean.csv  YM_clean.csv
data/easylanguage_indicators/: indicators_plot_EMD.csv  indicators_plot_ES.csv  indicators_plot_NQ.csv  indicators_plot_YM.csv
data/raw/: EMD.csv  ES.csv  NQ.csv  YM.csv
docs/: ablation_study_metodology.md  optimization_literature.md  walk_forward_methodology.md
notebook/: 01_data_validation.ipynb  02_loader_validation.ipynb  04_indicator_validation.ipynb  05_pipeline_dryrun.ipynb  06_exit_signal_test.ipynb  07_metrics_test.ipynb  08_trading_signal_test.ipynb  09_engine_test.ipynb  10_error_handling_test.ipynb  11_indicator_refactoring_test.ipynb  12_data_cleaning_test.ipynb  13_metrics_and_costs_test.ipynb  14_component_attribution_analisys.ipynb  prova.ipynb
src/cli/: __init__.py  run_ablation.py  run_backtest.py  tempCodeRunnerFile.py
src/core/: engine.py  indicators.py  loader.py  metrics.py
src/strategy/: __init__.py  strategy.py
src/strategy/exits/: profitable_close_exit.py  profitable_close_exit_.py  time__exit.py  time_exit.py
src/strategy/signals/: composite_rsi_exit.py  hurst_filter.py  rsi2.py
tests/: test_engine_costs.py  test_engine_smoke.py  test_indicators.py
